# rt_core

./: .bash_profile  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  build.bat  build.sh  build_android.py  conandata.yml  conanfile.py  test_crabbage_mips.dds
.github/workflows/: ccpp.yml  windows_d3d12.yml  windows_vulkan.yml
inc/rt_core/math/: camera.h  intersections.h  shading.h
inc/rt_core/types/: material.h
res/images/: crabbage_mips.dds
res/shaders/: atmosphere.hlsl  atmosphere.hlsli  camera.hlsl  camera.hlsli  compile.bat  compile_debug.bat  depth_test.hlsl  graphics_test.hlsl  indirect_compute.hlsl  indirect_prepare.hlsl  myfancyshader.txt  performance_test.hlsl  primitive.hlsl  primitive.hlsli  ray_basics.hlsl  ray_basics.hlsli  raytracing_pipeline_test.hlsl  raytracing_test.hlsl  repro.hlsl  resource_bindings.hlsl  resource_bindings.hlsli  test_acompute.hlsli  test_acompute_simple.hlsl  test_compute.hlsl  test_compute.hlsli  test_compute_no_pad_struct.hlsli
res/shaders/compiled/: test.oiSH  test.oiSH.bak
res/shaders/compiled/dxil/: depth_test.mainVS  graphics_test.mainPS  graphics_test.mainVS  indirect_compute.main  indirect_prepare.main  raytracing_pipeline_test.rt  raytracing_test.main
res/shaders/compiled/spirv/: graphics_test.mainPS  graphics_test.mainVS  indirect_compute.main  raytracing_pipeline_test.rt  raytracing_test.main
res/shaders/dxil/: depth_test.mainVS  graphics_test.mainPS  graphics_test.mainVS  indirect_compute.main  indirect_prepare.main  raytracing_pipeline_test.rt  raytracing_test.main
res/shaders/spirv/: depth_test.mainVS  graphics_test.mainPS  graphics_test.mainVS  indirect_compute.main  indirect_prepare.main  raytracing_pipeline_test.rt  raytracing_test.main
src/rt_core/math/: camera.c  intersections.c  shading.c
src/rt_core/types/: material.c
src/shaders/: compile.bat  compute_test.hlsl  depth_test.hlsl  graphics_test.hlsl  indirect_compute.hlsl  indirect_prepare.hlsl  resource_bindings.hlsl
src/shaders/dxil/: compute_test  compute_test.main  depth_test.mainVS  graphics_test.mainPS  graphics_test.mainVS  indirect_compute.main  indirect_prepare.main
src/shaders/spirv/: compute_test  compute_test.main  depth_test.mainVS  graphics_test.mainPS  graphics_test.mainVS  indirect_compute.main  indirect_prepare.main
tst/: atmos_helper.c  atmos_helper.h  test.c
